--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,11 @@
 <html>
 	<head>
-		<title>Phaser3 + Parceljs Template</title>
+		<title>Dungeon Crawler</title>
+		<style>
+			html {
+				background-color: black;
+			}
+		</style>
 	</head>
 	<body>
 		<script src="main.ts"></script>
