Improve to be in full-screen mode.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 	<head>
 		<title>Dungeon Crawler</title>
 		<style>
-			html {
+			html body {
+				height: 100%;
+				margin: 0;
 				background-color: black;
 			}
 		</style>
