--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head><title>Dungeon Crawler</title><style>html body{height:100%;margin:0;background-color:#000}</style></head><body> <script src="/main.b3731f45.js"></script> </body></html>
+<html><head><title>Dungeon Crawler</title><style>html body{height:100%;margin:0;background-color:#000}</style></head><body> <script src="main.b3731f45.js"></script> </body></html>
