--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,15 +1,9 @@
 <html>
-	<head>
-		<title>Dungeon Crawler</title>
-		<style>
-			html body {
-				height: 100%;
-				margin: 0;
-				background-color: black;
-			}
-		</style>
-	</head>
-	<body>
-		<script src="main.ts"></script>
-	</body>
+<head>
+    <title>Dungeon Crawler</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+</head>
+<body>
+    <script src="main.ts"></script>
+</body>
 </html>
