--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
+    <form id="startmultiplayer">
+        <input type="text" id="playername" placeholder="Your Name" />
+    </form>
     <script src="main.ts"></script>
 </body>
 </html>
