--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head><title>Dungeon Crawler</title><style>html body{height:100%;margin:0;background-color:#000}</style></head><body> <script src="main.62dfbec0.js"></script> </body></html>
+<html><head><title>Dungeon Crawler</title><link rel="stylesheet" type="text/css" href="styles.45fd1f8a.css"></head><body> <form id="startmultiplayer"> <input type="text" id="playername" placeholder="Your Name"> </form> <script src="main.4872c35f.js"></script> </body></html>
